index.html in public for easier linking

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Brandon Timothy P. Fernando & Rei Annica P. Francisco">
         <meta name="keywords" content="HTML, CSS, JavaScript, Web Development Oricentric, Origami, Paper Crafts" >
         <link rel="icon" type="image/png" href="/Oricentric_logo(transparent).png">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
         <script src="script.js"></script>
 
         <style>
@@ -145,11 +145,11 @@
 
         <nav class = "sidebar">
             <ul>
-                <li><a href="#home">HOME</a></li>
-                <li><a href="public/History_Of_Origami.html">HISTORY OF ORIGAMI</a></li>
-                <li><a href="public/Origami_Exhibit.html">ORIGAMI EXHIBIT</a></li>
-                <li><a href="public/Folding_In_Origami.html">FOLDING IN ORIGAMI</a></li>
-                <li><a href="public/References&Resources.html">RESOURCES</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="History_Of_Origami.html">HISTORY OF ORIGAMI</a></li>
+                <li><a href="Origami_Exhibit.html">ORIGAMI EXHIBIT</a></li>
+                <li><a href="Folding_In_Origami.html">FOLDING IN ORIGAMI</a></li>
+                <li><a href="References&Resources.html">RESOURCES</a></li>
             </ul>
             <aside class="hotkeys">
                 <h4> Hotkeys </h4>
@@ -159,9 +159,8 @@
                     <li> <p> <kbd>Shift</kbd> + <kbd>E</kbd> - EXHIBIT</p> </li>
                     <li> <p> <kbd>Shift</kbd> + <kbd>M</kbd> - MECHANISMS </p> </li>    
                     <li> <p> <kbd>Shift</kbd> + <kbd>R</kbd> - RESOURCES </p></li>    
-                    <li> <p> <kbd>Shift
                         
-                    </kbd> + <kbd>T</kbd> - THEME [Unfinished] </p> </li>    
+                    <li> <p> <kbd>Shift</kbd> + <kbd>T</kbd> - THEME </p>
                     <li> <p> <kbd>Shift</kbd> + <kbd>P</kbd> - PLAY [Unfinished] </p> </li>    
                     <li> <p> <kbd>Shift</kbd> + <kbd>U</kbd> - MUTE [Unfinished] </p> </li>    
                 </ul>
@@ -204,7 +203,7 @@
                             and interactive element to enhance user engagement.
                         </p>
                     </div>
-                    <img src="assets/origamiexample1home.png" alt="Origami Image Example 1" class="infoBoxImg">
+                    <img src="../assets/origamiexample1home.png" alt="Origami Image Example 1" class="infoBoxImg">
             </div>
 
             <div class = infoBox id="mission">
@@ -217,7 +216,7 @@
                             be inspired to learn and create their own origami pieces.
                         </p>
                     </div>
-                    <img src="assets/origamiexample2home.png" alt="Origami Image Example 2" class="infoBoxImg">
+                    <img src="../assets/origamiexample2home.png" alt="Origami Image Example 2" class="infoBoxImg">
              </div>
 
             <div class = infoBox id="audience">
@@ -229,7 +228,7 @@
                             of origami. 
                         </p>
                     </div>
-                    <img src="assets/kidsdoingorigami.png" alt="Origami Kids" class="infoBoxImg">
+                    <img src="../assets/kidsdoingorigami.png" alt="Origami Kids" class="infoBoxImg">
             </div>
         </section>
 
@@ -237,27 +236,27 @@
             <h2> Our masterfully crafted webpages! </h2>
             <div class="divFeature" id="history">
                 <h2> Oricentric: Unfolding a Colorful History </h2>
-                <a href ="public/History_Of_Origami.html">
-                    <img src="assets/origamihistoryhome.png" alt="Origami Image History" class="divFeatureImg">
+                <a href ="History_Of_Origami.html">
+                    <img src="../assets/origamihistoryhome.png" alt="Origami Image History" class="divFeatureImg">
                 </a>
             </div>
 
             <div class="divFeature" id="exhibit">
                 <h2> Oricentric: Showcasing Numerous Masterpieces </h2>
-                <a href ="public/Origami_Exhibit.html">
-                    <img src="assets/origamiexhibithome.png" alt="Origami Image Exhibit" class="divFeatureImg">
+                <a href ="Origami_Exhibit.html">
+                    <img src="../assets/origamiexhibithome.png" alt="Origami Image Exhibit" class="divFeatureImg">
                 </a>
             </div>
             <div class="divFeature" id="folds">
                 <h2> Oricentric: The Science Behind Every Fold </h2>
-                <a href ="public/Folding_In_Origami.html">
-                    <img src="assets/origamimechanismshome.png" alt="Origami Image Folds" class="divFeatureImg">
+                <a href ="Folding_In_Origami.html">
+                    <img src="../assets/origamimechanismshome.png" alt="Origami Image Folds" class="divFeatureImg">
                 </a>
             </div>
             <div class="divFeature" id="references">
                 <h2> Oricentric: References Used </h2>
-                <a href = "public/References&Resources.html">
-                    <img src="assets/origamiexample3home.png" alt="Origami Image References/Example 3" class="divFeatureImg">
+                <a href = "References&Resources.html">
+                    <img src="../assets/origamiexample3home.png" alt="Origami Image References/Example 3" class="divFeatureImg">
                 </a>
             </div>
 
