--- a/public/Folding_In_Origami.html
+++ b/public/Folding_In_Origami.html
@@ -11,9 +11,9 @@
         <script src="script.js"></script>
     </head>
 
-     <nav class = "sidebar">
+    <nav class = "sidebar">
             <ul>
-                <li><a href="../index.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="History_Of_Origami.html">HISTORY OF ORIGAMI</a></li>
                 <li><a href="Origami_Exhibit.html">ORIGAMI EXHIBIT</a></li>
                 <li><a href="Folding_In_Origami.html">FOLDING IN ORIGAMI</a></li>
@@ -29,12 +29,19 @@
                     <li> <p> <kbd>Shift</kbd> + <kbd>R</kbd> - RESOURCES </p></li>    
                     <li> <p> <kbd>Shift
                         
-                    </kbd> + <kbd>T</kbd> - THEME </p> </li>    
-                    <li> <p> <kbd>Shift</kbd> + <kbd>P</kbd> - PLAY </p> </li>    
-                    <li> <p> <kbd>Shift</kbd> + <kbd>U</kbd> - MUTE </p> </li>    
+                    </kbd> + <kbd>T</kbd> - THEME [Unfinished] </p> </li>    
+                    <li> <p> <kbd>Shift</kbd> + <kbd>P</kbd> - PLAY [Unfinished] </p> </li>    
+                    <li> <p> <kbd>Shift</kbd> + <kbd>U</kbd> - MUTE [Unfinished] </p> </li>    
                 </ul>
             </aside>
         </nav>
+
+        <header>
+
+            <h1> Oricentric </h1>
+            <h2> The Art of Folds </h2>
+          
+        </header>
 
         <footer>
         <div class ="footerhead">
