--- a/public/History_Of_Origami.html
+++ b/public/History_Of_Origami.html
@@ -164,7 +164,7 @@
 
          <nav class = "sidebar">
             <ul>
-                <li><a href="../index.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="History_Of_Origami.html">HISTORY OF ORIGAMI</a></li>
                 <li><a href="Origami_Exhibit.html">ORIGAMI EXHIBIT</a></li>
                 <li><a href="Folding_In_Origami.html">FOLDING IN ORIGAMI</a></li>
