--- a/public/Folding_In_Origami.html
+++ b/public/Folding_In_Origami.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Brandon Timothy P. Fernando & Rei Annica P. Francisco">
         <meta name="keywords" content="HTML, CSS, JavaScript, Web Development Oricentric, Origami, Paper Crafts" >
         <link rel="stylesheet" href="../styles.css">
-        <script src="script.js"></script>
+        <script src="../script.js"></script>
     </head>
 
     <nav class = "sidebar">
