--- a/public/History_Of_Origami.html
+++ b/public/History_Of_Origami.html
@@ -203,34 +203,30 @@
             <h2> Unfolding the History of Origami </h2>
             <div id="timeline-line"></div>
                 <div id="timeline-cards">
+
                 <article id = "earlyBeginnings" class="timeline-item"> 
                     <div class="timeline-point"></div>
-
-                        <div class="timeline-content">
-                            <div class = "timeline-text"> 
-                        <h3> Early Beginnings and Invention of Origami </h3>
+                    <div class="timeline-content">
+                        <div class = "timeline-text"> 
+                            <h3> Early Beginnings and Invention of Origami </h3>
 <p>
     It is quite difficult to trace the exact origins and plot a comprehensive and concise timeline of origami’s history. 
     However, despite most of its information being disintegrated, 
     it is believed that Japan’s tradition of paper folding began shortly after Buddhist monks from China brought paper to Korea and Japan at around the sixth (6th) Century. 
     First appearing in China around the 2nd century BCE, paper replaced heavier writing materials such as bamboo and wood. 
-
 </p>
                         </div>
-
-                    <div class="timeline-image">
-                        <img src="../assets/origamihistoryimage1.png" alt="Ancient Origami Illustration" width="500px">
-                    </div>
-
+                        <div class="timeline-image">
+                            <img src="../assets/origamihistoryimage1.png" alt="Ancient Origami Illustration" width="500px">
+                        </div>
                     </div>
                 </article>
 
                 <article id = "japaneseCulture" class="timeline-item"> 
                     <div class="timeline-point"></div>
-
                     <div class="timeline-content">
                         <div class = "timeline-text"> 
-                    <h3> Integration of Origami into Japanese Culture </h3>
+                            <h3> Integration of Origami into Japanese Culture </h3>
 <p>
     Shortly thereafter, the art of folding paper was limited only to religious and ceremonial use as paper was expensive. 
     <i>Girei-ori</i>, or ceremonial folds, were done by the Ogasawara and Ise clans- noble families who developed this strict folding style for ceremonies. 
@@ -251,46 +247,54 @@
     with origami even entering curriculums during the Meiji period- allowing children to learn patience, balance, and precision.
 </p>
                         </div>
-                    <div class="timeline-image">
-                        <img src="../assets/origamihistoryimage3.png" alt="Japanese Origami Illustration" width="867px">
-                        <img src="../assets/origamihistoryimage4.png" alt="Japanese Origami Illustration" width="867px">
-                        <img src="../assets/origamihistoryimage2.png" alt="ygfghi guhgyg" width="867px">
+                        <div class="timeline-image">
+                            <img src="../assets/origamihistoryimage3.png" alt="Japanese Origami Illustration" width="867px">
+                            <img src="../assets/origamihistoryimage4.png" alt="Japanese Origami Illustration" width="867px">
+                            <img src="../assets/origamihistoryimage2.png" alt="ygfghi guhgyg" width="867px">
+                        </div>
                     </div>
                 </article>
 
                 <article id = "globalInfluence" class="timeline-item"> 
                     <div class="timeline-point"></div>
                     <div class="timeline-content">
-                    <h3> Global Influence and Origami Spreading Worldwide </h3>
-                    <p>
-                        The tradition of paper folding had also independently developed in Europe in the 11th or 12th century in Spain and Germany, 
-                        with the early 1800s displaying folded paper animals, horses and riders in German museum collections. 
-                        Friedrich Frobel, a German Educator who created the first kindergarten, used paper folding as well as creative lessons to teach children. 
-                        European folding patterns also allowed teachers to introduce geometry to kindergarteners since it tended to be more geometric and used 45-degree folds, 
-                        rather than Japanese 22.5-degree folds.
-                    </p>  
+                        <div class = "timeline-text">
+                            <h3> Global Influence and Origami Spreading Worldwide </h3>
+<p>
+    The tradition of paper folding had also independently developed in Europe in the 11th or 12th century in Spain and Germany, 
+    with the early 1800s displaying folded paper animals, horses and riders in German museum collections. 
+    Friedrich Frobel, a German Educator who created the first kindergarten, used paper folding as well as creative lessons to teach children. 
+    European folding patterns also allowed teachers to introduce geometry to kindergarteners since it tended to be more geometric and used 45-degree folds, 
+    rather than Japanese 22.5-degree folds.
+</p>  
                     <br>
-                    <p>
-                        During the late 19th to mid-20th century, orisue or origata developed from its original root–oru (to fold)–and soon settled to origami (meaning “folded paper”).
-                        Born in 1911 in Kaminokawa Tochigi, Akira Yoshizawa is currently considered the father of origami. 
-                        Folding an estimate of more than 50,000 models in his entire lifetime, he also published Atarashi Origami Heijutsu (New Origami Art) in 1954,
-                        laying the foundation for what is now known as the Yoshizawa-Randlett system of notation of origami folds- 
-                        using mountain and valley folds represented by dashed and dotted lines. 
-                    </p>  
+<p>
+    During the late 19th to mid-20th century, orisue or origata developed from its original root–oru (to fold)–and soon settled to origami (meaning “folded paper”)                     Born in 1911 in Kaminokawa Tochigi, Akira Yoshizawa is currently considered the father of origami. 
+    Folding an estimate of more than 50,000 models in his entire lifetime, he also published Atarashi Origami Heijutsu (New Origami Art) in 1954,
+    laying the foundation for what is now known as the Yoshizawa-Randlett system of notation of origami folds- 
+    using mountain and valley folds represented by dashed and dotted lines. 
+</p>  
                     <br>
-                    <p>
-                        Concurrently, figures resembling cranes, frogs and flowers are folded by common people with <i>chiyogami</i>- 
-                        a single sheet of paper without requiring glue or scissors. Other techniques that include cutting and using glue have also been developed however. 
-                        Modular origami is another origami technique that uses multiple folded shapes to form larger constructions, 
-                        wet folding allows creations to have more curved shapes, and action origami allows origami to move such as jumping frogs. 
-                    </p>
-                </div>
+<p>
+    Concurrently, figures resembling cranes, frogs and flowers are folded by common people with <i>chiyogami</i>- 
+    a single sheet of paper without requiring glue or scissors. Other techniques that include cutting and using glue have also been developed however. 
+    Modular origami is another origami technique that uses multiple folded shapes to form larger constructions, 
+    wet folding allows creations to have more curved shapes, and action origami allows origami to move such as jumping frogs. 
+</p>
+                    </div>
+                    <div class="timeline-image">
+                        <img src="../assets/origamihistoryimage5.png" alt="Japanese Origami Illustration" width="500px">
+                        <img src="../assets/origamihistoryimage6.png" alt="Japanese Origami Illustration" width="500px">
+                        <img src="../assets/origamihistoryimage7.png" alt="ygfghi guhgyg" width="500px">
+                    </div>
+                </div>    
                 </article>
 
                 <article id = "modernApplications" class="timeline-item"> 
                     <div class="timeline-point"></div>
                     <div class="timeline-content">
-                    <h3> Modern Applications inspiring Architecture and Robotics </h3>
+                        <div class = "timeline-text">
+                            <h3> Modern Applications inspiring Architecture and Robotics </h3>
                     <p>
                         While origami is usually seen on tables or displayed as art, it also has many modern applications in Science. 
                         According to a theoretical study titled “Origami-Inspired Living Panels For Energy-efficient And Power-Generating Buildings” 
@@ -302,27 +306,28 @@
                         This maximized reflection and collection of sunlight during peak hours, increasing energy captured by the system. 
                         Concentrating sunlight into smaller, highly efficient areas can also increase thermal energy available for conversion.
                     </p>
-                    <p>
-                        Origami also skyrocketed and is used in space exploration. Inspired by origami, NASA’s golden starshade prototype is a large, foldable structure designed to block starlight,
-                        allowing telescopes to capture clearer images of distant exoplanets. 
-                    </p>
+                    <p> <!-- More info on modern applications of origami in architecture and robotics, especially NASA. UNIFINISHED --> </p>
+                    </div>
+                        <div class="timeline-image">
+                            <img src="../assets/origamihistoryimage8.png" alt="Japanese Origami Illustration" width="250px">
+                        </div>
                     </div>
                 </article>
             </div>
         </section>
 
         <section id="significance">
-        <!-- txt for significance of origami in culture and art -->
+        <!-- txt for significance of origami in culture and art. UNIFINISHED -->
         </section>
 
         <section id="innovators">
-        <!-- txt for notable innovators in origami history -->
+        <!-- txt for notable innovators in origami history. UNFINISHED -->
         </section>
 
 
         <section id="finalMessage">
             <p> 
-                Together, we will guide you on a exhilerating journey into the world of paper folding- from every crevice and fold lies a secret waiting to be told!
+                <!-- txt for final message in origami history. UNFINISHED -->
             </p>
         </section>
 
