--- a/public/References&Resources.html
+++ b/public/References&Resources.html
@@ -93,8 +93,29 @@
         </section>
 
         <section id="references">
-            <h2>References</h2>
-            <!-- References with APA Format -->
+            <h2>References & Resources</h2>
+            <h3>Main Page</h3>
+                <ul>
+                    <li> Origami flowers. (n.d.). https://www.gardensbythebay.com.sg/en/learn-with-us/explore-resources/crafts-and-worksheets/origami-flowers.html </li>
+                    <li> StockCake. (n.d.). Kids crafting origami. StockCake. https://stockcake.com/i/kids-crafting-origami_1095174_896234 </li>
+                    <li> ARTMEDIA.BG. (2024, January 6). Origami. https://artmedia.bg/en/art-mentor/origami/ </li>
+                    <li> Origami Exhibition Sep. 1st 12-2pm. (n.d.). Taro’s Origami Studio. https://www.tarosorigami.com/origami-exhibition-sep-1st-12-2pm/ </li>
+                    <li> origamiguide. (2023, December 3). History of Origami – a short explantation. Origami.Guide. https://origami.guide/history-of-origami/#google_vignette </li>
+                    <li> Robert C. Williams Museum of Papermaking. (2025). Origami. Georgia Institute of Technology. Retrieved from https://paper.gatech.edu/kinetic-joy/origami </li>
+                    <li> Taro's Origami Studio Store. (n.d.). A guide to the world of origami paper: The Paper Basics. Taro’s Origami Studio Store. https://shop.tarosorigami.com/pages/a-guide-to-the-world-of-origami-paper-the-paper-basics?srsltid=AfmBOoocvP7qDjQojk6UoTjb8iymIRGsmknVJ2GZxzhqAQuF5D3iH8W8 </li>
+                    <li> Desai, D. (2025, May 14). Origami in Home Decor: Creative ideas to beautify your space. Tulsi Origami. https://tulsiorigami.com/blogs/blog-post/origami-in-home-decor-creative-ideas-to-beautify-your-space?srsltid=AfmBOor_ugsUFCDNDGCxH2Am-BLDm543wJGIEN70R9qGb40yBRUxSuOT#google_vignette </li>
+                </ul>
+            <h3>History of Origami</h3>
+                <ul> 
+                    <li> The History of Origami | All about Japan. (2016, November 7). All About Japan. https://allabout-japan.com/en/article/4425/ </li>
+                    <li> Bot verification. (n.d.). https://origami.me/history-of-origami/ </li>
+                    <li> Collyer, K. (2023, October 21). How origami can help in space exploration. Global News. https://globalnews.ca/news/10037710/origami-in-space/ </li>
+                    <li> History of Origami | Robert C. Williams Museum of Papermaking. (n.d.). https://paper.gatech.edu/kinetic-joy/history-origami </li>
+                    <li> Basta, O. (2024, August). Origami-inspired living panels for energy-efficient and power-generating buildings. ResearchGate. https://doi.org/10.13140/RG.2.2.32764.14720 </li>
+                    <li> RoYuMi. (2024, March 4). The art of paper folding: A journey through the fascinating history of Origami. RoYuMi - Japan Hub. https://royumi.com/the-art-of-paper-folding-a-journey-through-the-fascinating-history-of-origami/?srsltid=AfmBOoqD9XwFnuePuBySlUfJgukTXnzzChARZeiqE93rz-BWW3RB_LnJ </li>
+                    <li> Richman-Abdou, K. (2022, August 9). Origami: How the ancient art of paper folding evolved over time and continues to inspire. My Modern Met. https://mymodernmet.com/history-of-origami-definition/ </li>
+
+                </ul>
             <h3>Origami Exhibit</h3>
             <ul>
                 <li>
@@ -103,6 +124,12 @@
                         https://www.w3schools.com/howto/howto_js_slideshow.asp
                     </a>
                 </li>
+            </ul>
+            <h3> Folding in Origami </h3>
+            <ul>
+                <li> Bot verification. (n.d.-b). https://origami.me/beginners-guide/ </li>
+                <li> Bot verification. (n.d.-a). https://origami.me/beginners-guide/ </li>
+                <li> Bower, I. (2024, June 20). Learn | Basic Origami Folds | The Simple Things. The Simple Things. https://www.thesimplethings.com/blog/learn-basic-origami-folds </li>
             </ul>
         </section>
         <footer>
