--- a/public/History_Of_Origami.html
+++ b/public/History_Of_Origami.html
@@ -8,7 +8,8 @@
         <meta name="author" content="Brandon Timothy P. Fernando & Rei Annica P. Francisco">
         <meta name="keywords" content="HTML, CSS, JavaScript, Web Development Oricentric, Origami, Paper Crafts" >
         <link rel="stylesheet" href="../styles.css">
-        <script src="../script.js"></script>
+        <link rel="icon" type="image/png" href="../assets/Oricentric_logo(transparent).png">
+        <script src="script.js"></script>
         <style>
             #intro_objectives {
                 margin-bottom: 2rem;
@@ -164,7 +165,7 @@
 
          <nav class = "sidebar">
             <ul>
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="../index.html">HOME</a></li>
                 <li><a href="History_Of_Origami.html">HISTORY OF ORIGAMI</a></li>
                 <li><a href="Origami_Exhibit.html">ORIGAMI EXHIBIT</a></li>
                 <li><a href="Folding_In_Origami.html">FOLDING IN ORIGAMI</a></li>
@@ -173,6 +174,7 @@
             <aside class="hotkeys">
                 <h4> Hotkeys </h4>
                 <ul>
+                
                     <li> <p> <kbd>Shift</kbd> + <kbd>B</kbd> - HOME </p> </li>
                     <li> <p> <kbd>Shift</kbd> + <kbd>H</kbd> - HISTORY </p> </li>   
                     <li> <p> <kbd>Shift</kbd> + <kbd>E</kbd> - EXHIBIT</p> </li>
@@ -203,30 +205,37 @@
             <h2> Unfolding the History of Origami </h2>
             <div id="timeline-line"></div>
                 <div id="timeline-cards">
-
                 <article id = "earlyBeginnings" class="timeline-item"> 
                     <div class="timeline-point"></div>
-                    <div class="timeline-content">
-                        <div class = "timeline-text"> 
-                            <h3> Early Beginnings and Invention of Origami </h3>
+
+                        <div class="timeline-content">
+                            <div class = "timeline-text"> 
+                        <h3> Early Beginnings and Invention of Origami </h3>
 <p>
     It is quite difficult to trace the exact origins and plot a comprehensive and concise timeline of origami’s history. 
     However, despite most of its information being disintegrated, 
     it is believed that Japan’s tradition of paper folding began shortly after Buddhist monks from China brought paper to Korea and Japan at around the sixth (6th) Century. 
     First appearing in China around the 2nd century BCE, paper replaced heavier writing materials such as bamboo and wood. 
+
 </p>
                         </div>
-                        <div class="timeline-image">
-                            <img src="../assets/origamihistoryimage1.png" alt="Ancient Origami Illustration" width="500px">
-                        </div>
+
+                    <div class="timeline-image">
+                        <figure>
+                            <img src="../assets/origmihistoryimage1.png" alt="Ancient illustration of people around a table, most likely early use of paper" width="500px">
+                            <figcaption>
+                                Paper folding traditions began in Japan shortly after Buddhist monks brought paper from China around the 6th Century. 
+                            </figcaption>
+                        </figure>
                     </div>
                 </article>
 
                 <article id = "japaneseCulture" class="timeline-item"> 
                     <div class="timeline-point"></div>
+
                     <div class="timeline-content">
                         <div class = "timeline-text"> 
-                            <h3> Integration of Origami into Japanese Culture </h3>
+                    <h3> Integration of Origami into Japanese Culture </h3>
 <p>
     Shortly thereafter, the art of folding paper was limited only to religious and ceremonial use as paper was expensive. 
     <i>Girei-ori</i>, or ceremonial folds, were done by the Ogasawara and Ise clans- noble families who developed this strict folding style for ceremonies. 
@@ -247,54 +256,57 @@
     with origami even entering curriculums during the Meiji period- allowing children to learn patience, balance, and precision.
 </p>
                         </div>
-                        <div class="timeline-image">
-                            <img src="../assets/origamihistoryimage3.png" alt="Japanese Origami Illustration" width="867px">
-                            <img src="../assets/origamihistoryimage4.png" alt="Japanese Origami Illustration" width="867px">
-                            <img src="../assets/origamihistoryimage2.png" alt="ygfghi guhgyg" width="867px">
-                        </div>
+                    <div class="timeline-image">
+                        <figure>
+                            <img src="../assets/origamihistoryimage3.png" alt="Japanese Woman folding crane" width="867px">
+                            <figcaption> Commoners from Japan begin to fold paper </figcaption>
+                        </figure>
+
+                        <figure>
+                            <img src="../assets/origamihistoryimage4.png" alt="Japanese Man Folding" width="867px">
+                            <figcaption> A picture of a man also folding origami </figcaption>
+                        </figure>
+
+                        <figure>
+                            <img src="../assets/origamihistoryimage2.png" alt="old illustration of japanese" width="867px">
+                            <figcaption> Japanese people folding origami </figcaption>
+                        </figure>
                     </div>
                 </article>
 
                 <article id = "globalInfluence" class="timeline-item"> 
                     <div class="timeline-point"></div>
                     <div class="timeline-content">
-                        <div class = "timeline-text">
-                            <h3> Global Influence and Origami Spreading Worldwide </h3>
-<p>
-    The tradition of paper folding had also independently developed in Europe in the 11th or 12th century in Spain and Germany, 
-    with the early 1800s displaying folded paper animals, horses and riders in German museum collections. 
-    Friedrich Frobel, a German Educator who created the first kindergarten, used paper folding as well as creative lessons to teach children. 
-    European folding patterns also allowed teachers to introduce geometry to kindergarteners since it tended to be more geometric and used 45-degree folds, 
-    rather than Japanese 22.5-degree folds.
-</p>  
+                    <h3> Global Influence and Origami Spreading Worldwide </h3>
+                    <p>
+                        The tradition of paper folding had also independently developed in Europe in the 11th or 12th century in Spain and Germany, 
+                        with the early 1800s displaying folded paper animals, horses and riders in German museum collections. 
+                        Friedrich Frobel, a German Educator who created the first kindergarten, used paper folding as well as creative lessons to teach children. 
+                        European folding patterns also allowed teachers to introduce geometry to kindergarteners since it tended to be more geometric and used 45-degree folds, 
+                        rather than Japanese 22.5-degree folds.
+                    </p>  
                     <br>
-<p>
-    During the late 19th to mid-20th century, orisue or origata developed from its original root–oru (to fold)–and soon settled to origami (meaning “folded paper”)                     Born in 1911 in Kaminokawa Tochigi, Akira Yoshizawa is currently considered the father of origami. 
-    Folding an estimate of more than 50,000 models in his entire lifetime, he also published Atarashi Origami Heijutsu (New Origami Art) in 1954,
-    laying the foundation for what is now known as the Yoshizawa-Randlett system of notation of origami folds- 
-    using mountain and valley folds represented by dashed and dotted lines. 
-</p>  
+                    <p>
+                        During the late 19th to mid-20th century, orisue or origata developed from its original root–oru (to fold)–and soon settled to origami (meaning “folded paper”).
+                        Born in 1911 in Kaminokawa Tochigi, Akira Yoshizawa is currently considered the father of origami. 
+                        Folding an estimate of more than 50,000 models in his entire lifetime, he also published Atarashi Origami Heijutsu (New Origami Art) in 1954,
+                        laying the foundation for what is now known as the Yoshizawa-Randlett system of notation of origami folds- 
+                        using mountain and valley folds represented by dashed and dotted lines. 
+                    </p>  
                     <br>
-<p>
-    Concurrently, figures resembling cranes, frogs and flowers are folded by common people with <i>chiyogami</i>- 
-    a single sheet of paper without requiring glue or scissors. Other techniques that include cutting and using glue have also been developed however. 
-    Modular origami is another origami technique that uses multiple folded shapes to form larger constructions, 
-    wet folding allows creations to have more curved shapes, and action origami allows origami to move such as jumping frogs. 
-</p>
-                    </div>
-                    <div class="timeline-image">
-                        <img src="../assets/origamihistoryimage5.png" alt="Japanese Origami Illustration" width="500px">
-                        <img src="../assets/origamihistoryimage6.png" alt="Japanese Origami Illustration" width="500px">
-                        <img src="../assets/origamihistoryimage7.png" alt="ygfghi guhgyg" width="500px">
-                    </div>
-                </div>    
+                    <p>
+                        Concurrently, figures resembling cranes, frogs and flowers are folded by common people with <i>chiyogami</i>- 
+                        a single sheet of paper without requiring glue or scissors. Other techniques that include cutting and using glue have also been developed however. 
+                        Modular origami is another origami technique that uses multiple folded shapes to form larger constructions, 
+                        wet folding allows creations to have more curved shapes, and action origami allows origami to move such as jumping frogs. 
+                    </p>
+                </div>
                 </article>
 
                 <article id = "modernApplications" class="timeline-item"> 
                     <div class="timeline-point"></div>
                     <div class="timeline-content">
-                        <div class = "timeline-text">
-                            <h3> Modern Applications inspiring Architecture and Robotics </h3>
+                    <h3> Modern Applications inspiring Architecture and Robotics </h3>
                     <p>
                         While origami is usually seen on tables or displayed as art, it also has many modern applications in Science. 
                         According to a theoretical study titled “Origami-Inspired Living Panels For Energy-efficient And Power-Generating Buildings” 
@@ -306,28 +318,27 @@
                         This maximized reflection and collection of sunlight during peak hours, increasing energy captured by the system. 
                         Concentrating sunlight into smaller, highly efficient areas can also increase thermal energy available for conversion.
                     </p>
-                    <p> <!-- More info on modern applications of origami in architecture and robotics, especially NASA. UNIFINISHED --> </p>
-                    </div>
-                        <div class="timeline-image">
-                            <img src="../assets/origamihistoryimage8.png" alt="Japanese Origami Illustration" width="250px">
-                        </div>
+                    <p>
+                        Origami also skyrocketed and is used in space exploration. Inspired by origami, NASA’s golden starshade prototype is a large, foldable structure designed to block starlight,
+                        allowing telescopes to capture clearer images of distant exoplanets. 
+                    </p>
                     </div>
                 </article>
             </div>
         </section>
 
         <section id="significance">
-        <!-- txt for significance of origami in culture and art. UNIFINISHED -->
+        <!-- txt for significance of origami in culture and art -->
         </section>
 
         <section id="innovators">
-        <!-- txt for notable innovators in origami history. UNFINISHED -->
+        <!-- txt for notable innovators in origami history -->
         </section>
 
 
         <section id="finalMessage">
             <p> 
-                <!-- txt for final message in origami history. UNFINISHED -->
+                Together, we will guide you on a exhilerating journey into the world of paper folding- from every crevice and fold lies a secret waiting to be told!
             </p>
         </section>
 
@@ -344,7 +355,7 @@
                         <li> <i> Fernando </i>b2029btpfernando@pshs.edu.ph </li>
                         <li> <i> Francisco:</i> b2029rapfrancisco@pshs.edu.ph </li>
                     </ul>
-                </div
+                </div>
 
                 <!-- Right -->
 
@@ -356,12 +367,17 @@
                 </div>
                 
                 <div id="footerlogoimg">
-                    <img src="Oricentric_logo(transparent).png" alt="Oricentric Logo" width="267px">
+                    <img src="../assets/Oricentric_logo(transparent).png" alt="Oricentric Logo" width="267px">
                 </div>
             </div>
 
             <p> &copy; 2025 Oricentric — Fernando & Francisco</p>
 
-        </footer>     
+        </footer>   
+        <script>
+            /* hotkeys for navigation between pages
+            hold shift plus a key to go to a specific page
+            five hotkeys are currently implemented */
+        </script>  
     </body>
 </html>
